# wire

./: .gitignore  Cargo.toml  README.md
.beads/: metadata.json
.githooks/: pre-commit
.github/workflows/: release.yml
crates/wire-app/: Cargo.toml  tauri.conf.json
crates/wire-app/capabilities/: default.json
crates/wire-app/icons/: icon.icns
crates/wire-app/src/: commands.rs  lib.rs  main.rs  state.rs  types.rs
crates/wire-cli/: Cargo.toml
crates/wire-cli/src/: main.rs
crates/wire-cli/tests/: cli_integration.rs
crates/wire-core/: Cargo.toml
crates/wire-core/src/: error.rs  lib.rs
crates/wire-core/src/breaking/: mod.rs
crates/wire-core/src/chain/: extract.rs  mod.rs
crates/wire-core/src/collection/: env.rs  loader.rs  mod.rs  request.rs  template.rs
crates/wire-core/src/diff/: engine.rs  format.rs  ignore.rs  mod.rs
crates/wire-core/src/drift/: mod.rs
crates/wire-core/src/history/: mod.rs
crates/wire-core/src/http/: executor.rs  mod.rs
crates/wire-core/src/scan/: aspnet.rs  detect.rs  envdiscover.rs  express.rs  fastapi.rs  mod.rs  nextjs.rs  springboot.rs  types.rs
crates/wire-core/src/snapshot/: mod.rs
crates/wire-core/src/test/: dotpath.rs  mod.rs  runner.rs
crates/wire-core/src/variables/: engine.rs  mod.rs
crates/wire-core/src/variables/secrets/: mod.rs
crates/wire-core/src/variables/secrets/resolvers/: aws.rs  dotenv.rs  env.rs  mod.rs  vault.rs
examples/httpbin/.wire/: history.jsonl  wire.yaml
examples/httpbin/.wire/envs/: dev.yaml
examples/httpbin/.wire/requests/anything/: anything-get.wire.yaml  anything-post.wire.yaml
examples/httpbin/.wire/requests/auth/: basic-auth.wire.yaml  bearer-auth.wire.yaml  digest-auth.wire.yaml
examples/httpbin/.wire/requests/chains/: uuid-flow.wire.yaml
examples/httpbin/.wire/requests/cookies/: delete-cookies.wire.yaml  get-cookies.wire.yaml  set-cookies.wire.yaml
examples/httpbin/.wire/requests/dynamic-data/: base64-encode.wire.yaml  bytes.wire.yaml  delay.wire.yaml  drip.wire.yaml  range.wire.yaml  stream-bytes.wire.yaml  stream.wire.yaml  uuid.wire.yaml
examples/httpbin/.wire/templates/: auth.wire.yaml  json-api.wire.yaml  t.wire.yaml  temp.wire.yaml
plans/active/vscode-extension/: context.md  plan.md  tasks.md
skills/: wire.md
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  CollectionSidebar.test.tsx  PromptModal.test.tsx  PromptModal.tsx  index.css  types.ts  utils.test.ts  utils.ts
vscode-wire/: .gitignore  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-wire/src/: extension.ts
vscode-wire/src/cli/: binary.ts  runner.ts
vscode-wire/src/core/: template.ts  types.ts  variables.ts  yaml.ts
vscode-wire/src/env/: EnvManager.ts  EnvSwitcher.ts
vscode-wire/src/panels/: RequestPanel.ts
vscode-wire/src/sidebar/: CollectionTree.ts  FileWatcher.ts
vscode-wire/webview/: package-lock.json  package.json  tsconfig.json
vscode-wire/webview/src/: App.tsx  RequestBuilder.tsx  ResponseViewer.tsx  TestResults.tsx
vscode-wire/webview/styles/: vscode.css
(+32 files in other folders)
