[package]
name = "wire-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wire-core = { path = "../wire-core" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[lib]
name = "wire_app_lib"
crate-type = ["lib", "staticlib", "cdylib"]
